<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about1"
        app:showAsAction="never" />
    <item
        android:id="@+id/log"
        android:orderInCategory="100"
        android:title="@string/alog_out"
        android:icon="@drawable/ic_baseline_login_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/shareit"
        android:orderInCategory="100"
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="always"/>

</menu>